# FileDistance

./: .gitignore  CMakeLists.txt  LICENSE  README.md  distance.c  distance.h  filebuffer.c  filebuffer.h  filechange.c  filechange.h  filedistance.c  filedistance.h  main.c  search.c  search.h  sortedlist.c  sortedlist.h  stack.c  stack.h  tools.c  tools.h
